--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,40 @@ PH-WebDev.code-workspace
 node_modules
 #Module 27
 ./Module-27-payoo-app/node_modules
+
+.bzrignore
+.chefignore
+.cfignore
+.cvsignore
+.boringignore
+.deployignore
+.distignore
+.dockerignore
+.ebignore
+.eleventyignore
+.eslintignore
+.flooignore
+ignore-glob
+.gitignore
+.gcloudignore
+.helmignore
+.jpmignore
+.jshintignore
+.hgignore
+.mtn-ignore
+.nodemonignore
+.npmignore
+.nuxtignore
+.openapi-generator-ignore
+.p4ignore
+.prettierignore
+.ignore
+.stylelintignore
+.stylintignore
+.swagger-codegen-ignore
+.terraformignore
+.tfignore
+.tokeignore
+.upignore
+.vercelignore
+.yarnignore
