--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
         "module": "ESNext",
         "moduleResolution": "Bundler",
         "target": "ES2022",
-        "jsx": "react",
+        "jsx": "preserve",
+        "checkJs": true,
         "allowImportingTsExtensions": true,
         "strictNullChecks": true,
         "strictFunctionTypes": true
