--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "prettier": "3.3.3"
   },
   "dependencies": {
-    "@types/react": "^18.3.11"
+    "@types/react": "^18.3.11",
+    "prop-types": "^15.8.1"
   }
 }
