--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@types/react": "^18.3.11",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "react-icons": "^5.3.0"
   }
 }
