--- a/Module-44-axio-rechart-awesomecomponents/package.json
+++ b/Module-44-axio-rechart-awesomecomponents/package.json
@@ -13,7 +13,9 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
