--- a/Module-44-axio-rechart-awesomecomponents/package.json
+++ b/Module-44-axio-rechart-awesomecomponents/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "recharts": "^2.13.0"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "surge": "^0.24.6",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.9"
   }
