--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "firebase": "^11.0.1",
+    "flowbite-react": "^0.10.2",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
