--- a/Module-50-mail-pass/package.json
+++ b/Module-50-mail-pass/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^11.0.1",
+    "flowbite-react": "^0.10.2",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
