--- a/Module-51-private-route/package.json
+++ b/Module-51-private-route/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
     "sort-by": "^0.0.2"
