--- a/Module-55-db/Client/package.json
+++ b/Module-55-db/Client/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0"
