--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "firebase": "^11.0.1",
     "flowbite-react": "^0.10.2",
+    "nodemon": "^3.1.7",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6"
   },
