--- a/Module-56-Expresso/Client/package.json
+++ b/Module-56-Expresso/Client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0"
