--- a/Module-58-job-portal/package.json
+++ b/Module-58-job-portal/package.json
@@ -18,8 +18,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.0.2",
-    "sort-by": "^1.2.0"
+    "react-toastify": "^10.0.6",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
