--- a/Module-58-job-portal/package.json
+++ b/Module-58-job-portal/package.json
@@ -15,6 +15,7 @@
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
+    "motion": "^11.14.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
