--- a/module_76_next/package.json
+++ b/module_76_next/package.json
@@ -12,7 +12,8 @@
     "next": "15.2.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
